<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:paddingTop="20dp"
    android:paddingBottom="30dp"
    android:layout_height="wrap_content">
    <TextView
        android:layout_width="match_parent"
        android:text="@string/select_option"
        android:textAllCaps="true"
        android:textColor="#000"
        android:textSize="18sp"
        android:padding="10dp"
        android:textStyle="bold"
        android:layout_marginStart="19dp"
        android:layout_height="wrap_content"/>
    <TextView
        android:layout_width="match_parent"
        android:id="@+id/server"
        android:padding="10dp"
        android:paddingStart="25dp"
        android:paddingEnd="20dp"
        android:text="@string/server"
        android:textSize="18sp"
        android:textColor="#000"
        android:background="?selectableItemBackground"
        android:drawablePadding="25dp"
        android:layout_height="wrap_content"
        app:drawableStartCompat="@drawable/ic_server_image" />
    <TextView
        android:id="@+id/storage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?selectableItemBackground"
        android:drawablePadding="25dp"
        android:padding="10dp"
        android:paddingStart="25dp"
        android:paddingEnd="20dp"
        android:text="@string/storage"
        android:textColor="#000"
        android:textSize="18sp"
        app:drawableStartCompat="@drawable/ic_folder" />
</LinearLayout>