<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".newdata.NewOrderActivity"
    android:layout_height="match_parent">
    <include layout="@layout/simple_header"
        android:id="@+id/top"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_below="@id/top"
        android:layout_above="@+id/view"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:paddingBottom="80dp"
            android:layout_height="wrap_content">

   <include layout="@layout/user_info_card"/>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <RelativeLayout
        android:layout_width="match_parent"

        android:layout_height="wrap_content">

        <ProgressBar
            android:id="@+id/progressbar"
            android:layout_centerVertical="true"
            android:layout_width="20dp"
            android:indeterminateTint="@color/black_overlay"
            android:layout_height="30dp"
            android:layout_toEndOf="@id/rate_amount"
            android:indeterminate="false" />
        <TextView
            android:layout_width="wrap_content"
            android:textSize="16sp"
            android:text="@string/rate"
            android:textColor="#000"
            android:layout_margin="10dp"
            android:id="@+id/rate_amount"
            android:layout_centerVertical="true"
            android:layout_height="wrap_content"/>
        <EditText
            android:layout_width="match_parent"
            android:textSize="16sp"
            android:inputType="number"
            android:hint="@string/enter_new_rate"
            android:textColor="@color/colorPrimaryDark"
            android:layout_margin="10dp"
            android:id="@+id/rate_edit"
            android:visibility="gone"
            android:layout_toStartOf="@id/change"
            android:layout_toEndOf="@id/rate_amount"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/change"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="7dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_gravity="end"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/change"
            android:textColor="#000"
            android:textSize="16sp"
            android:visibility="gone" />
    </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        app:boxBackgroundColor="#fff"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:textSize="18sp"
            android:id="@+id/date"
            android:textColor="#000"

            android:enabled="false"
            android:hint="@string/order_date"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            app:boxBackgroundColor="#fff"
            android:id="@+id/total_bottle_layout"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:textSize="18sp"
                android:id="@+id/total_quantity"
                android:inputType="number"
                android:hint="@string/total_pieces"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
            app:boxBackgroundColor="#fff"
            android:layout_marginTop="10dp"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:textSize="18sp"
            android:id="@+id/total_amount"
            android:inputType="number"
            android:textColor="#000"
            android:enabled="false"
            android:hint="@string/total_amount"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        app:boxBackgroundColor="#fff"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:textSize="18sp"
            android:id="@+id/paid_amount"
            android:inputType="number"
            android:hint="@string/amount_received"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    app:boxBackgroundColor="#fff"
                    android:layout_marginTop="10dp"
                    android:layout_height="wrap_content">
                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:textSize="18sp"

                        android:id="@+id/quantity_return"
                        android:inputType="number"
                        android:hint="Bottles Return(If any)"
                        android:layout_height="wrap_content"/>
                </com.google.android.material.textfield.TextInputLayout>
                <TextView
                    android:layout_width="wrap_content"
                    android:text="Loading bottle"
                    android:textSize="16sp"
                    android:gravity="center"
                    android:layout_marginStart="10dp"
                    android:drawablePadding="10dp"
                    android:layout_marginEnd="10dp"
                    android:id="@+id/bottle"
                    android:layout_marginTop="30dp"
                    android:layout_toStartOf="@id/bottleProgress"
                    android:drawableStart="@drawable/water_bottle1"
                    android:layout_height="wrap_content"/>
                <ProgressBar
                    android:layout_width="20dp"
                    android:id="@+id/bottleProgress"
                    android:layout_marginTop="30dp"
                    android:layout_marginEnd="10dp"
                    android:layout_alignParentEnd="true"
                    android:layout_height="20dp"/>
            </RelativeLayout>

            <TextView
                android:layout_width="match_parent"
                android:text="Select Mode Of Payment"

                android:layout_marginTop="30dp"
                android:layout_marginStart="12dp"
                android:textColor="#000"
                android:layout_height="wrap_content" />

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:paddingEnd="20dp"
                android:paddingStart="10dp"
                android:clipToPadding="false"
                android:scrollbarFadeDuration="1000"
                android:layout_height="wrap_content">

                <RadioGroup
                    android:layout_width="wrap_content"
                    android:orientation="horizontal"
                    android:id="@+id/radiogroup"
                    android:layout_marginTop="10dp"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:textSize="16sp"
                        android:drawablePadding="6dp"
                        android:buttonTint="@color/red"
                        android:id="@+id/noPayment"
                        android:textColor="@color/red"
                        android:drawableStart="@drawable/ic_no_money"
                        android:text="@string/no_payment"
                        android:layout_height="wrap_content" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:textSize="16sp"
                        android:text="Cash"
                        android:drawableTint="@color/green"
                        android:drawableStart="@drawable/ic_stat_name"
                        android:layout_height="wrap_content" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:textSize="16sp"
                        android:drawableStart="@drawable/ic_paytm"

                        android:layout_height="wrap_content" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:textSize="16sp"
                        android:drawableStart="@drawable/ic_phonepe"
                        android:layout_height="wrap_content" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:textSize="16sp"
                        android:drawableStart="@drawable/ic_googlepay"
                        android:layout_height="wrap_content" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:textSize="16sp"
                        android:drawableStart="@drawable/ic_amazonpay"
                        android:layout_height="wrap_content" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:textSize="16sp"
                        android:text="@string/other"
                        android:paddingEnd="20dp"
                        android:paddingStart="1dp"
                        android:drawablePadding="7dp"
                        android:drawableStart="@drawable/ic_other_payment"
                        android:layout_height="wrap_content" />
                </RadioGroup>
            </HorizontalScrollView>
        </LinearLayout>
    </ScrollView>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:id="@+id/view"
        android:layout_above="@id/saveBt"
        android:background="@color/view_color" />

    <Button
        android:layout_width="match_parent"
        android:padding="16dp"
        android:id="@+id/saveBt"
        android:text="@string/save_changes"
        android:layout_margin="10dp"
        android:textAllCaps="false"
        android:layout_alignParentBottom="true"
        android:layout_height="wrap_content" />

    <ProgressBar
        android:layout_width="wrap_content"
        android:id="@+id/progressBt"
        android:visibility="gone"
        android:indeterminateTint="@color/black_overlay"
        android:elevation="10dp"
        android:layout_marginBottom="18dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_height="wrap_content" />


</RelativeLayout>